crates/reinhardt-pages/tests/ui/head/fail/base_missing_href.rs
use reinhardt_pages::head;

fn main() {
	let _ = head!(|| { base { } });
}
