crates/reinhardt-pages/tests/ui/head/fail/base_missing_href.stderr
error: base tag requires exactly one 'href' attribute with a value
 --> tests/ui/head/fail/base_missing_href.rs:4:10
  |
4 |     let _ = head!(|| { base { } });
  |             ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `head` (in Nightly builds, run with -Z macro-backtrace for more info)
